<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kreitech.io.kreitrackerandroid.PhoneImeiActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone_number"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/prompt_phone"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="169dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_imei"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/prompt_imei"
        android:layout_below="@+id/prompt_phone"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_continue"
        android:id="@+id/send"
        android:onClick="sendPhoneImei"
        android:layout_below="@+id/prompt_imei"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp" />
</RelativeLayout>
